src/objects/User.object
<CustomObject>
    <fields>
        <fullName>App_Access__c</fullName>
        <description>This field is for reporting only and should not be used in any process or code</description>
        <label>App Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>This will be used for users with project/app-specific divisions.</description>
        <inlineHelpText>This will be used for users with project/app-specific divisions.</inlineHelpText>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This will be used for users with project/app-specific titles.</description>
        <inlineHelpText>This will be used for users with project/app-specific titles.</inlineHelpText>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>